Alpha 0.2 release: Lots of minor bug fixes, resource file added for the default translation (and code to populate this file in the data folder if not already present). Permission checks added to interaction creation. Player and group records now save correctly. Removed (for now) the option to change a group's name - it requires a lot more complexity then it's really worth at this point. Updated to build vs craftbukkit 1.3.1R2, mcmmo 1.3.11 and vault 1.2.18.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 main: com.oreilly.mmogroup.MMOGroup
 author: Paul O'Reilly
-name: MMO Groups
+name: MMOGroup
 version: 0.2
 depend: [mcMMO, Vault]
 
